Final game with JUnit tests and complex widgets